Feat: Integrate Gemini AI Translator

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "login": "firebase login"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "clsx": "^2.1.1",
     "firebase": "^12.8.0",
     "framer-motion": "^12.26.2",
